# Hackathon-ABI-Frameworks

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  Makefile  PRD.md  PRODUCTION_GAPS.md  PROJECT_GUIDE.md  Procfile  README.md  alembic.ini  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt  schema.sql  storage.py
.github/workflows/: ci.yml
api/: config.py  db.py  main.py  observability.py
backend/: cache.py  cli.py  jobs.py  llm.py  ml_apply.py  pipeline.py  requirements.txt
backend/api/: main.py
backend/db/: database.py
backend/eligibility/: rules.py
backend/extraction/: parser.py
backend/ingestion/: client.py
frontend/: index.html
infra/: Dockerfile.api  Dockerfile.worker  prometheus.yml
infra/grafana/provisioning/dashboards/: default.yml
mcp/: README.md  mcp_server.py  pyproject.toml  requirements.txt  test_mcp_server.py
ml/: COLAB.md  train_colab.ipynb  train_colab_oneclick.ipynb  train_model.py
ml/models/: decision_tree.summary.json
pipeline/: flows.py
pipeline/migrations/: env.py
pipeline/migrations/versions/: 0001_baseline_schema.py
schema/: schema.sql
scripts/: generate_colab_notebook.py  start.sh
tests/: test_smoke.py
web/: .dockerignore  Dockerfile  package.json
web/app/: globals.css  layout.tsx  page.tsx
