[project]
name = "wound-iq"
version = "0.1.0"
description = "ABI Wound IQ — Medicare Part B wound care billing eligibility pipeline"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # HTTP + retry
    "httpx>=0.27",
    "tenacity>=9.0",
    # Data modeling
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # Postgres
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",   # alembic uses sync driver
    "alembic>=1.13",
    # Pipeline orchestration
    "prefect>=3.0",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    # Cache
    "redis>=5.0",
    # Phase 2+ (declared here so dependency graph is single-source-of-truth)
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "types-redis>=4.6",
    "hypothesis>=6.112",
    "httpx[cli]>=0.27",
    # Process manager for `make up` (runs api + web + prefect in one terminal)
    "honcho>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ASYNC",
    "S",   # flake8-bandit
]
ignore = [
    "E501",  # line too long (black handles)
    "S101",  # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_decorators = false
files = ["extraction", "eligibility", "pipeline", "api"]

[[tool.mypy.overrides]]
module = ["prefect.*", "presidio_analyzer.*", "presidio_anonymizer.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that hit the real network or take >1s",
    "contract: contract tests against the live mock PCC API",
]
